# SM-CRM-System

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  build-prompt.md  data-model.md  granola-ingestion.md  obsidian-archive.md  real-ingest-checklist.md  succession-lens.md  twenty-setup.md
docs/deployment/: coolify.md  launchd-daily.md
docs/plans/: 2026-07-04-001-feat-phase0-relationship-intel-poc-plan.md
examples/transcripts/: 2026-06-30-granola-bob-smith-succession-intro.md  2026-07-01-granola-sarah-chen-referral-lunch.md  2026-07-02-granola-brightpixel-vendor-pitch.md
launchd/: com.stablemischief.relationship-intel.daily.plist
scripts/: fleet-crm-source-report.sh  relationship-intel-daily.sh  reset-local-output.sh  serve-review-ui.sh
scripts/docker/: daily.sh  start-review-ui.sh
scripts/launchd/: com.stablemischief.smcrm-daily.plist  com.stablemischief.smcrm-reviewui.plist
src/relationship_intel/: cli.py  config.py  doctor.py  errors.py  pipeline.py  review.py
src/relationship_intel/crm/: base.py  mock_adapter.py  sync.py  (+2 more)
tests/: conftest.py  test_anthropic_client.py  test_cli.py  test_codex_client.py  test_config.py  test_contract_report.py  test_crm_mock_adapter.py  test_dedupe.py  test_doctor.py  test_evaluation.py  test_extraction.py  test_granola_api.py  test_idempotency.py  test_intake.py  test_logging_safety.py  test_no_send.py  test_obsidian_writer.py  test_review_ui.py  test_twenty_adapter.py  test_twenty_provisioner.py  test_weekly_plan.py
(+20 files in other folders)
