[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relationship-intel"
version = "0.1.0"
description = "Transcript-to-relationship-intelligence pipeline (Obsidian evidence archive + Twenty CRM + AI planning layer)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
